src/test/deca/context/invalid/declMethod-sameFieldMethodOneClass.context
declMethod-sameFieldMethodOneClass.deca:1: